animeted home photo and fix of space in bottom of home

--- a/home.html
+++ b/home.html
@@ -56,7 +56,10 @@
 
       <!-- צד ימין: תמונה -->
       <div class="col-12 col-lg-6 text-center mx-auto">
-        <img src="shoping_cart_consept.png" class="hero-img" alt="Smart Cart concept"> <!-- תמונה של המוצר -->
+        <video class="hero-video" autoplay muted loop playsinline>
+  <source src="shoping_cart_conept_animeted_final.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+</video>
       </div>
     </div>
   </header>
@@ -113,15 +116,6 @@
           <p class="text-muted mb-0">Optional add-ons: scanning, navigation, and payments.</p>
         </div>
       </div>
-    </div>
-  </section>
-
-  <!-- קריאה לפעולה (CTA) -->
-  <section class="container py-5">
-    <div class="cta-card p-4 p-md-5 text-center">
-      <h3 class="mb-2">Ready to elevate the in-store experience?</h3>
-      <p class="text-muted mb-4">Let’s explore how Smart Cart fits your store or research project.</p>
-      <a href="contact.html" class="btn btn-primary btn-pill">Contact us</a> <!-- כפתור יצירת קשר -->
     </div>
   </section>
 
