feedback placeholder page update

--- a/signup.html
+++ b/signup.html
@@ -24,7 +24,8 @@
         <ul class="navbar-nav ms-auto align-items-lg-center gap-lg-3">
           <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
           <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-          <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
+          <li id="nav-feedback" class="nav-item d-none"><a class="nav-link" href="feedback.html">Feedback</a></li>
+          <li id="nav-auth" class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
         </ul>
       </div>
     </div>
@@ -149,5 +150,40 @@
   </script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script type="module">
+    import { initializeApp, getApps } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
+    import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
+
+    const fbAuthConfig = {
+      apiKey: "AIzaSyAZpdtDkHAmCz9GosbJ-PkO4KM2iaNTfHQ",
+      authDomain: "freecart11.firebaseapp.com",
+      projectId: "freecart11",
+      messagingSenderId: "369725415465",
+      appId: "1:369725415465:web:8beecb3baf985ddddb7c38"
+    };
+
+    if (!getApps().length) initializeApp(fbAuthConfig);
+    const fbAuth = getAuth();
+
+    const navFeedback = document.getElementById('nav-feedback');
+    const navAuth = document.getElementById('nav-auth');
+
+    onAuthStateChanged(fbAuth, (user) => {
+      if (user) {
+        navFeedback?.classList.remove('d-none');
+        if (navAuth) {
+          navAuth.innerHTML = `<a class="nav-link" href="#" id="nav-logout">Logout (${user.email || user.uid})</a>`;
+          document.getElementById('nav-logout')?.addEventListener('click', async (e) => {
+            e.preventDefault();
+            await signOut(fbAuth);
+            window.location.href = 'home.html';
+          });
+        }
+      } else {
+        navFeedback?.classList.add('d-none');
+        if (navAuth) navAuth.innerHTML = `<a class="nav-link" href="login.html">Login</a>`;
+      }
+    });
+  </script>
 </body>
 </html>
