update feedback link name

--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
         <ul class="navbar-nav ms-auto align-items-lg-center gap-lg-3"> <!-- ms-auto = מיישר את התפריט לצד ימין -->
           <li class="nav-item"><a class="nav-link active" href="about.html">About</a></li> <!-- עמוד נוכחי -->
           <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li> <!-- קישור לעמוד צור קשר -->
-          <li id="nav-feedback" class="nav-item d-none"><a class="nav-link" href="feedback.html">Feedback</a></li>
+          <li id="nav-feedback" class="nav-item d-none"><a class="nav-link" href="feedback.html">Live Feed</a></li>
           <li id="nav-auth" class="nav-item"><a class="nav-link" href="login.html">Login</a></li> <!-- קישור/שינוי כניסה/יציאה -->
         </ul>
       </div>
@@ -133,3 +133,4 @@
   </script>
 </body>
 </html>
+
