--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
         <ul class="navbar-nav ms-auto align-items-lg-center gap-lg-3"> <!-- ms-auto מזז את התפריט לצד ימין -->
           <li class="nav-item"><a class="nav-link" href="about.html">About</a></li> <!-- קישור לעמוד אודות -->
           <li class="nav-item"><a class="nav-link active" href="contact.html">Contact</a></li> <!-- העמוד הפעיל -->
-          <li id="nav-feedback" class="nav-item d-none"><a class="nav-link" href="feedback.html">Feedback</a></li>
+          <li id="nav-feedback" class="nav-item d-none"><a class="nav-link" href="feedback.html">Live Feed</a></li>
           <li id="nav-auth" class="nav-item"><a class="nav-link" href="login.html">Login</a></li> <!-- קישור/שינוי כניסה/יציאה -->
         </ul>
       </div>
@@ -174,3 +174,4 @@
   </script>
 </body>
 </html>
+
