--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
         <ul class="navbar-nav ms-auto align-items-lg-center gap-lg-3">
           <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
           <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-          <li id="nav-feedback" class="nav-item d-none"><a class="nav-link" href="feedback.html">Feedback</a></li>
+          <li id="nav-feedback" class="nav-item d-none"><a class="nav-link" href="feedback.html">Live Feed</a></li>
           <li id="nav-auth" class="nav-item"><a class="nav-link active" href="login.html">Login</a></li>
         </ul>
       </div>
@@ -169,3 +169,4 @@
   </script>
 </body>
 </html>
+
