open contact page

--- a/about.html
+++ b/about.html
@@ -30,6 +30,7 @@
       <!-- התפריט הנפתח עצמו -->
       <div class="collapse navbar-collapse" id="mainNav">
         <ul class="navbar-nav ms-auto align-items-lg-center gap-lg-3"> <!-- ms-auto = מיישר את התפריט לצד ימין -->
+          <li class="nav-item"><a class="nav-link active" href="openContact.html">Admin Panel </a></li>
           <li class="nav-item"><a class="nav-link active" href="about.html">About</a></li> <!-- עמוד נוכחי -->
           <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li> <!-- קישור לעמוד צור קשר -->
           <li id="nav-feedback" class="nav-item d-none"><a class="nav-link" href="feedback.html">Live Feed</a></li>
